--- a/wineshare/build.gradle
+++ b/wineshare/build.gradle
@@ -59,6 +59,10 @@ dependencies {
 	// jackson
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.0'
 
+	implementation 'org.springframework.boot:spring-boot-starter-security' // Spring Security 의존성 추가
+
+	testImplementation 'org.springframework.security:spring-security-test' // Spring Security 테스트 의존성 추가
+
 }
 tasks.named('test') {
 	useJUnitPlatform()
