--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.username=olimwoojin
 spring.datasource.password=olimwoojin
 spring.jpa.database-platform= org.hibernate.dialect.MariaDB103Dialect
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
