board관련 했는데 될지 모르겠다..진짜..돌겠다

--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -12,3 +12,15 @@ spring.jpa.database-platform= org.hibernate.dialect.MariaDB103Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+# ?? ?? ???
+spring.servlet.multipart.max-file-size=20MB
+
+# ??? ?? ???
+spring.servlet.multipart.max-request-size=100MB
+
+# ????
+boardImgLocation=src/main/resources/uploads/boardImage/
+
+# ??? ??? ??
+uploadPath=file:src/main/resources/uploads/
