marketing 관련했는데 이것도 내나 board처럼 에러 천국일듯..

--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -13,14 +13,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
-# ?? ?? ???
+# 파일 최대 사이즈
 spring.servlet.multipart.max-file-size=20MB
 
-# ??? ?? ???
+# 요청당 최대 사이즈
 spring.servlet.multipart.max-request-size=100MB
 
-# ????
+# 파일경로
 boardImgLocation=src/main/resources/uploads/boardImage/
 
-# ??? ??? ??
+marketingImgLocation=src/main/resources/uploads/marketingImage/
+
+# 리소스 업로드 경로
 uploadPath=file:src/main/resources/uploads/
