--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -24,3 +24,6 @@ boardImgLocation=src/main/resources/uploads/boardImage/
 
 # ??? ??? ??
 uploadPath=file:src/main/resources/uploads/
+
+spring.mvc.static-path-pattern=/**
+spring.web.resources.add-mappings=true
