템플릿 레이아웃 처리~

--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.thymeleaf.cache=false
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3307/winesharedb
-spring.datasource.username=root
-spring.datasource.password={my123456}
+spring.datasource.username=olimwoojin
+spring.datasource.password=olimwoojin
 spring.jpa.database-platform= org.hibernate.dialect.MariaDB103Dialect
 
 spring.jpa.hibernate.ddl-auto=update
