보드사진 씻팔

--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -20,7 +20,8 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
 
 # ????
-boardImgLocation=src/main/resources/uploads/boardImage/
+LicenseImgLocation=C:/wineshareImgs/certify
+RequestImgLocation=C:/wineshareImgs/request
 
 # ??? ??? ??
-uploadPath=file:src/main/resources/uploads/
+uploadPath=file:///C:/wineshareImgs/
