게시판 css 수정 및 admin 폴더 만듬

--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -20,8 +20,9 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
 
 # ????
-LicenseImgLocation=C:/wineshareImgs/certify
-RequestImgLocation=C:/wineshareImgs/request
+LicenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify
+RequestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request
 
 # ??? ??? ??
-uploadPath=file:///C:/wineshareImgs/
+uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
+
