--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.thymeleaf.cache=false
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3307/winesharedb
-spring.datasource.username=root
-spring.datasource.password={my123456}
+spring.datasource.username=olimwoojin
+spring.datasource.password=olimwoojin
 spring.jpa.database-platform= org.hibernate.dialect.MariaDB103Dialect
 
 spring.jpa.hibernate.ddl-auto=update
@@ -20,8 +20,9 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
 
 # ????
-LicenseImgLocation=C:/wineshareImgs/certify
-RequestImgLocation=C:/wineshareImgs/request
+licenseImgLocation=C:/wineshareImgs/certify
+requestImgLocation=C:/wineshareImgs/request
+marketImgLocation=C:/wineshareImgs/market
 
 # ??? ??? ??
 uploadPath=file:///C:/wineshareImgs/
