프로퍼티스 경로 우선 이렇게 각자 경로 써놓읍시다 계속 충돌 보이니까

--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -20,9 +20,19 @@ spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
 
 # ????
+
+# jj root
 licenseImgLocation=C:/wineshareImgs/certify
 requestImgLocation=C:/wineshareImgs/request
 marketImgLocation=C:/wineshareImgs/market
 
 # ??? ??? ??
 uploadPath=file:///C:/wineshareImgs/
+
+# sr root
+# ????
+#LicenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify
+#RequestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request
+#
+## ??? ??? ??
+#uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
