--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -19,10 +19,17 @@ spring.servlet.multipart.max-file-size=20MB
 # ??? ?? ???
 spring.servlet.multipart.max-request-size=100MB
 
-# ????
-LicenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify
-RequestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request
+## ????
+#LicenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify
+#RequestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request
+#wineImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/wines
+#
+## ??? ??? ??
+#uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
 
-# ??? ??? ??
-uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
+LicenseImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/certify/
+RequestImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/request/
+wineImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/wines/
+
+uploadPath=file:///Users/oh-eunwoo/Desktop/wineshareImgs/
 
