마케팅 리스트 css 수정 및 약관동의 추가

--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -3,10 +3,12 @@ spring.application.name=wineshare
 server.port=8022
 spring.thymeleaf.cache=false
 
+spring.thymeleaf.prefix=classpath:/templates/
+
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3307/winesharedb
-spring.datasource.username=olimwoojin
-spring.datasource.password=olimwoojin
+spring.datasource.username=root
+spring.datasource.password={my123456}
 spring.jpa.database-platform= org.hibernate.dialect.MariaDB103Dialect
 
 spring.jpa.hibernate.ddl-auto=update
@@ -21,18 +23,19 @@ spring.servlet.multipart.max-request-size=100MB
 
 # ????
 
-# jj root
-licenseImgLocation=C:/wineshareImgs/certify
-requestImgLocation=C:/wineshareImgs/request
-marketImgLocation=C:/wineshareImgs/market
-
-# ??? ??? ??
-uploadPath=file:///C:/wineshareImgs/
+## jj root
+#licenseImgLocation=C:/wineshareImgs/certify
+#requestImgLocation=C:/wineshareImgs/request
+#marketImgLocation=C:/wineshareImgs/market
+#
+## ??? ??? ??
+#uploadPath=file:///C:/wineshareImgs/
 
 # sr root
 # ????
-#LicenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify
-#RequestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request
-#
-## ??? ??? ??
-#uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
+licenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify
+requestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request
+marketImgLocation=/Users/choisulim/Desktop/wineshareImgs/market
+
+# ??? ??? ??
+uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
