--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3307/winesharedb
-spring.datasource.username=root
-spring.datasource.password={my123456}
+spring.datasource.username=olimwoojin
+spring.datasource.password=olimwoojin
 spring.jpa.database-platform= org.hibernate.dialect.MariaDB103Dialect
 
 spring.jpa.hibernate.ddl-auto=update
@@ -32,17 +32,18 @@ spring.servlet.multipart.max-request-size=100MB
 #uploadPath=file:///C:/wineshareImgs/
 
 #sr root
-licenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify
-requestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request
-wineImgLocation=/Users/choisulim/Desktop/wineshareImgs/wines
-marketImgLocation=/Users/choisulim/Desktop/wineshareImgs/market
-# ??? ??? ??
-uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
+#licenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify
+#requestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request
+#wineImgLocation=/Users/choisulim/Desktop/wineshareImgs/wines
+#marketImgLocation=/Users/choisulim/Desktop/wineshareImgs/market
+## ??? ??? ??
+#uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
 #
+
 #ew root
-#licenseImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/certify/
-#requestImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/request/
-#wineImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/wines/
-#marketImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/market/
-#
-#uploadPath=file:///Users/oh-eunwoo/Desktop/wineshareImgs/
+licenseImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/certify/
+requestImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/request/
+wineImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/wines/
+marketImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/market/
+
+uploadPath=file:///Users/oh-eunwoo/Desktop/wineshareImgs/
