--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -24,12 +24,12 @@ spring.servlet.multipart.max-request-size=100MB
 # ????
 
 # jj root
-#licenseImgLocation=C:/wineshareImgs/certify
-#requestImgLocation=C:/wineshareImgs/request
-#marketImgLocation=C:/wineshareImgs/market
-#wineImgLocation=C:/wineshareImgs/wines
-#
-#uploadPath=file:///C:/wineshareImgs
+licenseImgLocation=C:/wineshareImgs/certify
+requestImgLocation=C:/wineshareImgs/request
+marketImgLocation=C:/wineshareImgs/market
+wineImgLocation=C:/wineshareImgs/wines
+
+uploadPath=file:///C:/wineshareImgs
 
 #sr root
 #licenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify
@@ -41,9 +41,9 @@ spring.servlet.multipart.max-request-size=100MB
 #
 
 #ew root
-licenseImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/certify/
-requestImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/request/
-wineImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/wines/
-marketImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/market/
-
-uploadPath=file:///Users/oh-eunwoo/Desktop/wineshareImgs/
+#licenseImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/certify/
+#requestImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/request/
+#wineImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/wines/
+#marketImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/market/
+#
+#uploadPath=file:///Users/oh-eunwoo/Desktop/wineshareImgs/
