일단 뭐 다 건드린거같은데 내일은 마케팅 다시한번보고 시큐리티권한?하면될듯?

--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.thymeleaf.prefix=classpath:/templates/
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3307/winesharedb
-spring.datasource.username=root
-spring.datasource.password={my123456}
+spring.datasource.username=olimwoojin
+spring.datasource.password=olimwoojin
 spring.jpa.database-platform= org.hibernate.dialect.MariaDB103Dialect
 
 spring.jpa.hibernate.ddl-auto=update
@@ -29,15 +29,15 @@ requestImgLocation=C:/wineshareImgs/request
 marketImgLocation=C:/wineshareImgs/market
 wineImgLocation=C:/wineshareImgs/wines
 
-uploadPath=file:///C:/wineshareImgs
+uploadPath=file:///C:/wineshareImgs/
 
 #sr root
-licenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify/
-requestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request/
-wineImgLocation=/Users/choisulim/Desktop/wineshareImgs/wines/
-marketImgLocation=/Users/choisulim/Desktop/wineshareImgs/market/
-# ??? ??? ??
-uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
+#licenseImgLocation=/Users/choisulim/Desktop/wineshareImgs/certify/
+#requestImgLocation=/Users/choisulim/Desktop/wineshareImgs/request/
+#wineImgLocation=/Users/choisulim/Desktop/wineshareImgs/wines/
+#marketImgLocation=/Users/choisulim/Desktop/wineshareImgs/market/
+## ??? ??? ??
+#uploadPath=file:////Users/choisulim/Desktop/wineshareImgs/
 
 
 #ew root
