--- a/wineshare/src/main/resources/application.properties
+++ b/wineshare/src/main/resources/application.properties
@@ -41,9 +41,9 @@ uploadPath=file:///C:/wineshareImgs/
 
 
 #ew root
-licenseImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/certify/
-requestImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/request/
-wineImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/wines/
-marketImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/market/
-
-uploadPath=file:///Users/oh-eunwoo/Desktop/wineshareImgs/
+#licenseImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/certify/
+#requestImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/request/
+#wineImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/wines/
+#marketImgLocation=/Users/oh-eunwoo/Desktop/wineshareImgs/market/
+#
+#uploadPath=file:///Users/oh-eunwoo/Desktop/wineshareImgs/
